--- a/src/main/webapp/app/entities/critereRecherche/critere-recherche.component.html
+++ b/src/main/webapp/app/entities/critereRecherche/critere-recherche.component.html
@@ -88,66 +88,66 @@
               <ul class="nav nav-tabs nav-justified">    
                 <!--- Menu pour une recherche d'éléve-->  
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                    <a class="nav-link active" href="#" jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
+                    <a  [class.active]="menuActive=='resume'" [class.nav-link]='true' (click)="menuActif('resume','eleve')"   jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
                   </li>
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
+                    <a [class.active]="menuActive=='siecle'" [class.nav-link]='true'  (click)="menuActif('siecle','eleve')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                      <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
+                      <a  [class.active]="menuActive=='aaf'" [class.nav-link]='true' (click)="menuActif('aaf','eleve')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                      <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
+                      <a  [class.active]="menuActive=='toutatice'" [class.nav-link]='true' (click)="menuActif('toutatice','eleve')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
+                    <a  [class.active]="menuActive=='eduConnect'" [class.nav-link]='true' (click)="menuActif('eduConnect','eleve')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='eleve'">
-                  <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
+                  <a  [class.active]="menuActive=='aten'" [class.nav-link]='true' (click)="menuActif('aten','eleve')"   jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
                 </li>
                     <!--- Menu pour une recherche de rerésentant légal-->  
                 <li class="nav-item"  *ngIf="menu=='representantLegal'">
-                        <a class="nav-link active" href="#" jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
+                        <a  [class.active]="menuActive=='resume'" [class.nav-link]='true' (click)="menuActif('resume','representantLegal')"  jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='representantLegal'">
-                  <a class="nav-link" href="#"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
+                  <a [class.active]="menuActive=='siecle'" [class.nav-link]='true'  (click)="menuActif('siecle','representantLegal')" jhiTranslate="outilDiagnostic.critereRecherche.ldapSiecle"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='representantLegal'">
-                     <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
+                     <a  [class.active]="menuActive=='aaf'" [class.nav-link]='true' (click)="menuActif('aaf','representantLegal')" jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='representantLegal'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
+                    <a [class.active]="menuActive=='aten'" [class.nav-link]='true'  (click)="menuActif('aten','representantLegal')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAten"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='representantLegal'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
+                    <a  [class.active]="menuActive=='toutatice'" [class.nav-link]='true' (click)="menuActif('toutatice','representantLegal')" jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
                 </li>
                 <li class="nav-item" *ngIf="menu=='representantLegal'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
+                    <a [class.active]="menuActive=='eduConnect'" [class.nav-link]='true'  (click)="menuActif('eduConnect','representantLegal')" jhiTranslate="outilDiagnostic.critereRecherche.ldapEduConnect"></a>
                 </li>
                      <!--- Menu pour une recherche de personnel-->  
                 <li class="nav-item" *ngIf="menu=='personnel'">
-                  <a class="nav-link active" href="#" jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
+                  <a [class.active]="menuActive=='resume'" [class.nav-link]='true' (click)="menuActif('resume','personnel')" jhiTranslate="outilDiagnostic.critereRecherche.resume"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                    <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapSirhen"></a>
+                    <a  [class.active]="menuActive=='sirhen'" [class.nav-link]='true' (click)="menuActif('sirhen','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapSirhen"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                   <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapEpp"></a>
+                   <a  [class.active]="menuActive=='epp'" [class.nav-link]='true' (click)="menuActif('epp','personnel')" jhiTranslate="outilDiagnostic.critereRecherche.ldapEpp"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                   <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapEppPrive"></a>
+                   <a  [class.active]="menuActive=='eppPrive'" [class.nav-link]='true' (click)="menuActif('eppPrive','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapEppPrive"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                     <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
+                     <a [class.active]="menuActive=='aaf'" [class.nav-link]='true'  (click)="menuActif('aaf','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAaf"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                    <a class="nav-link" href="#"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAcademique"></a>
+                    <a  [class.active]="menuActive=='academique'" [class.nav-link]='true' (click)="menuActif('academique','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAcademique"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                  <a class="nav-link" href="#" jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
+                  <a  [class.active]="menuActive=='toutatice'" [class.nav-link]='true' (click)="menuActif('toutatice','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapToutatice"></a>
                 </li>
                 <li class="nav-item"  *ngIf="menu=='personnel'">
-                    <a class="nav-link" href="#"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAgora"></a>
+                    <a  [class.active]="menuActive=='agora'" [class.nav-link]='true' (click)="menuActif('agora','personnel')"  jhiTranslate="outilDiagnostic.critereRecherche.ldapAgora"></a>
                 </li>
             </ul>
           </div>
